--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <main>
     <section class="actions">
       <div>
+        <button id="change-theme" class="switch"></button>
         <div class="selector">
           <div class="slr-head">
             <span class="slr-selected" key="0">Choose an option</span>
-            <button class="slr-options-visibility"><img src="" alt=""></button>
+            <button class="slr-options-visibility"><img src="/assets/icons/chevron-down.svg" alt=""></button>
           </div>
           <ul class="slr-options">
             <li key="10">Easy (10 Mines)</li>
@@ -38,7 +39,14 @@
     </section>
   </main>
   <footer>
-
+    <span>Created by @Saky-Dev</span>
+    <ul>
+      <li><a href="https://twitter.com/isaacgh_0"><img src="/assets/icons/brand-twitter-filled.svg" alt="twitter"></a></li>
+      <li><a href="https://github.com/Saky-Dev"><img src="/assets/icons/brand-github-filled.svg" alt="github"></a></li>
+      <li><a href="https://www.linkedin.com/in/isaacgh0/"><img src="/assets/icons/brand-linkedin.svg" alt="linkedin"></a></li>
+      <li><a href="https://saky.dev"><img src="/assets/icons/brand-sakydev.svg" alt="SakyDev"></a></li>
+    </ul>
+    <button>Licence and Terms of Use</button>
   </footer>
   <script src="/scripts/index.js"></script>
 </body>
