Added styes to button to change color theme; Button to change color theme is working with JS; App check predefined browser color theme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <section class="actions">
-      <div>
+      <div class="left">
         <button id="change-theme" class="switch"></button>
         <div class="selector">
           <div class="slr-head">
@@ -29,7 +29,7 @@
         </div>
         <button id="play">Start</button>
       </div>
-      <div>
+      <div class="right">
         <span id="flags"></span>
         <span id="time"></span>
       </div>
