Styled selector header

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <section class="actions">
       <div class="left">
         <button id="change-theme" class="switch"></button>
-        <div class="selector">
+        <div class="selector" status="hidden">
           <div class="slr-head">
-            <span class="slr-selected" key="0">Choose an option</span>
+            <span class="slr-selected" key="0" id="difficulty-selected">Choose an option</span>
             <button class="slr-options-visibility"><img src="/assets/icons/chevron-down.svg" alt=""></button>
           </div>
           <ul class="slr-options">
-            <li key="10">Easy (10 Mines)</li>
-            <li key="50">Normal (50 Mines)</li>
-            <li key="100">Hard (100 Mines)</li>
-            <li key="200">Extreme (200 Mines)</li>
+            <li><button key="10">Easy (10 Mines)</button></li>
+            <li><button key="50">Normal (50 Mines)</button></li>
+            <li><button key="100">Hard (100 Mines)</button></li>
+            <li><button key="200">Extreme (200 Mines)</button></li>
           </ul>
         </div>
         <button id="play">Start</button>
