--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Minesweeper</title>
   <link rel="stylesheet" href="/styles/index.css">
 </head>
-<body theme="light">
+<body>
   <header>
     <h1>Minesweeper</h1>
     <h2>Play now!</h2>
