Now defficulty selector is working with JS

--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
     <section class="actions">
       <div class="left">
         <button id="change-theme" class="switch"></button>
-        <div class="selector" status="hidden">
+        <div class="selector">
           <div class="slr-head">
             <span class="slr-selected" key="0" id="difficulty-selected">Choose an option</span>
             <button class="slr-options-visibility"><img src="/assets/icons/chevron-down.svg" alt=""></button>
           </div>
           <ul class="slr-options">
-            <li><button key="10">Easy (10 Mines)</button></li>
-            <li><button key="50">Normal (50 Mines)</button></li>
-            <li><button key="100">Hard (100 Mines)</button></li>
-            <li><button key="200">Extreme (200 Mines)</button></li>
           </ul>
         </div>
         <button id="play">Start</button>
