Added styles to board section; Filled game area; Linked game areabuttons with virtual board; Added bomb icon to project assets

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </section>
     <section class="game">
-      <div class="board"></div>
+      <div id="board"></div>
     </section>
   </main>
   <footer>
