Added styles to footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li><a href="https://www.linkedin.com/in/isaacgh0/"><img src="/assets/icons/brand-linkedin.svg" alt="linkedin"></a></li>
       <li><a href="https://saky.dev"><img src="/assets/icons/brand-sakydev.svg" alt="SakyDev"></a></li>
     </ul>
-    <button>Licence and Terms of Use</button>
+    <button><a href="https://tabler-icons.io/">Icons get from Tabler Icons</a></button>
   </footer>
   <script src="/scripts/index.js"></script>
 </body>
