--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minesweeper</title>
-  <link rel="stylesheet" href="/styles/index.css">
+  <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
   <header>
@@ -17,7 +17,7 @@
         <div class="selector">
           <div class="slr-head">
             <span class="slr-selected" key="0" id="difficulty-selected">Choose an option</span>
-            <button class="slr-options-visibility"><img src="/assets/icons/chevron-down.svg" alt=""></button>
+            <button class="slr-options-visibility"><img src="assets/icons/chevron-down.svg" alt=""></button>
           </div>
           <ul class="slr-options">
           </ul>
@@ -36,13 +36,13 @@
   <footer>
     <span>Created by @Saky-Dev</span>
     <ul>
-      <li><a href="https://twitter.com/isaacgh_0"><img src="/assets/icons/brand-twitter-filled.svg" alt="twitter"></a></li>
-      <li><a href="https://github.com/Saky-Dev"><img src="/assets/icons/brand-github-filled.svg" alt="github"></a></li>
-      <li><a href="https://www.linkedin.com/in/isaacgh0/"><img src="/assets/icons/brand-linkedin.svg" alt="linkedin"></a></li>
-      <li><a href="https://saky.dev"><img src="/assets/icons/brand-sakydev.svg" alt="SakyDev"></a></li>
+      <li><a href="https://twitter.com/isaacgh_0"><img src="assets/icons/brand-twitter-filled.svg" alt="twitter"></a></li>
+      <li><a href="https://github.com/Saky-Dev"><img src="assets/icons/brand-github-filled.svg" alt="github"></a></li>
+      <li><a href="https://www.linkedin.com/in/isaacgh0/"><img src="assets/icons/brand-linkedin.svg" alt="linkedin"></a></li>
+      <li><a href="https://saky.dev"><img src="assets/icons/brand-sakydev.svg" alt="SakyDev"></a></li>
     </ul>
     <button><a href="https://tabler-icons.io/">Icons get from Tabler Icons</a></button>
   </footer>
-  <script src="/scripts/index.js"></script>
+  <script src="scripts/index.js"></script>
 </body>
 </html>
